[tool.poetry]
name = "ipydeck"
version = "0.2.0"
description = "Yet another Jupyter widget for deck.gl"
authors = ["Kentaro Ozeki <32771324+ozekik@users.noreply.github.com>"]
homepage = "https://ozekik.github.io/ipydeck/"
repository = "https://github.com/ozekik/ipydeck"
license = "MIT"
readme = "README.md"
packages = [{ include = "ipydeck" }]
include = ["ipydeck/static/*.js", "ipydeck/static/*.css", "NOTICE.txt"]

[tool.poetry.dependencies]
python = "^3.9"
anywidget = "^0.9.3"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.9"
watchfiles = "^0.21.0"
geopandas = "^0.14.1"
matplotlib = "^3.8.2"
sidecar = "^0.7.0"
jupyterlab-code-formatter = "^2.2.1"
ipywidgets = "^8.1.2"
jupyterlab-widgets = "^3.0.10"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
coverage = { extras = ["toml"], version = "^7.4.4" }
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
