[project]
name = "ipydeck"
version = "0.4.7"
description = "Yet another Jupyter widget for deck.gl"
authors = [
  { name = "Kentaro Ozeki", email = "32771324+ozekik@users.noreply.github.com" },
]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
dependencies = ["anywidget>=0.9.13,<0.10"]

[project.urls]
Homepage = "https://ozekik.github.io/ipydeck/"
Repository = "https://github.com/ozekik/ipydeck"

[dependency-groups]
dev = [
  "jupyterlab>=4.0.9,<5",
  "watchfiles>=0.21.0,<1",
  "geopandas>=0.14.1,<0.15",
  "matplotlib>=3.8.2,<4",
  "sidecar>=0.7.0,<0.8",
  "ipywidgets>=8.1.2,<9",
  "jupyterlab-widgets>=3.0.10,<4",
  "pyogrio>=0.7.2,<1",
  "pyarrow>=17.0.0",
  "sphinx>=8.1.3",
  "taskipy>=1.14.1",
  "sphinx-autobuild>=2024.10.3",
  "myst-parser>=4.0.1",
  "jupyter-sphinx>=0.5.3",
  "sphinx-book-theme>=1.1.3",
  "sphinx-copybutton>=0.5.2",
]
test = ["pytest>=8.1.1,<9", "coverage[toml]>=7.4.4,<8", "pytest-cov>=4.1.0,<5"]

[tool.taskipy.tasks]
docs-build = "sphinx-build -M clean docs/ _build/ && sphinx-build -M html docs/ _build/"
docs-watch = "sphinx-autobuild docs/ _build/html"
docs-open = "open _build/html/index.html"
docs-deploy = "task docs-build && pnpx gh-pages -d _build/html -f --nojekyll"

[tool.uv]
default-groups = ["dev", "test"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests", "ipydeck"]

[tool.hatch.build.targets.sdist]
include = ["ipydeck", "NOTICE.txt"]
artifacts = ["ipydeck/static/*.js", "ipydeck/static/*.css"]

[tool.hatch.build.targets.wheel]
include = ["ipydeck", "NOTICE.txt"]
artifacts = ["ipydeck/static/*.js", "ipydeck/static/*.css"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
